# sortverse-qt

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  pluginloader.cpp  pluginloader.h  sortverseplugin.cpp  sortverseplugin.h  util.cpp  util.h
src/dlfcn-win32/.github/: CODEOWNERS
src/pluginloader/: CMakeLists.txt  pluginloader.cpp  pluginloader.h
src/plugins/: CMakeLists.txt  Macros.cmake  sorter.cpp  sorter.h
src/plugins/bubbleSort/: CMakeLists.txt  bubbleSort.cpp  bubbleSort.h
src/plugins/insertionSort/: CMakeLists.txt  insertionSort.cpp  insertionSort.h
src/plugins/mergeSort/: CMakeLists.txt  mergeSort.cpp  mergeSort.h
src/plugins/quickSort/: CMakeLists.txt  quickSort.cpp  quickSort.h
src/plugins/selectionSort/: CMakeLists.txt  selectionSort.cpp  selectionSort.h
