add_plugin(mergeSort SOURCES mergeSort.cpp mergeSort.h) # TODO: make a Macros.cmake

# target_link_libraries(
    # mergeSort
    # pluginsort-core
# )



#add_library(
#    mergeSort 
#    SHARED 
#    mergeSort.cpp
#    )

#target_include_directories(
#    mergeSort 
#    PUBLIC 
#    ${CMAKE_CURRENT_SOURCE_DIR}
#    )
